HPC-8667: Make sure that link labels wrap in footnotes

--- a/html/themes/custom/common_design_subtheme/components/gho-footnotes/gho-footnotes.css
+++ b/html/themes/custom/common_design_subtheme/components/gho-footnotes/gho-footnotes.css
@@ -34,6 +34,9 @@
 .gho-footnote {
   word-wrap: break-word;
 }
+.gho-footnote a {
+  word-break: break-word;
+}
 .gho-footnote:target {
   background-color: #eee;
 }
